# web-server

./: CMakeLists.txt  README.md  build.bat  build.sh  main.cpp
config/: socket.config
src/: app.hpp
src/routes/: routes.cpp  routes.hpp  tags.handler.cpp
src/routes/pages/: home.cpp  pages.hpp
src/socket/: requests.cpp  socket.handler.cpp  socket.hpp
src/utils/: utils.hpp
src/utils/files/: files.reader.cpp  utils.files.hpp
src/utils/parsers/: config.parser.cpp
src/utils/text/: integers.cpp  trim.cpp  utils.text.hpp
website/: page.html  style.css
